--- a/arch/arm64/configs/lucy_dcm_jp-perf_defconfig
+++ b/arch/arm64/configs/lucy_dcm_jp-perf_defconfig
@@ -704,3 +704,4 @@ CONFIG_SND_SOC_ES9018=n
 CONFIG_SND_LGE_DSDP_DUAL_AUDIO=y
 CONFIG_LGE_HALL_IC=y
 CONFIG_LGE_DIAG_BYPASS=y
+CONFIG_USB_HOST_NOTIFY=y
