--- a/arch/arm64/configs/lucy_kt_kr-perf_defconfig
+++ b/arch/arm64/configs/lucy_kt_kr-perf_defconfig
@@ -721,3 +721,4 @@ CONFIG_LGE_PM_LGE_POWER_CLASS_STORE_MODE=y
 CONFIG_LGE_PM_LGE_POWER_CLASS_SIMPLE=y
 # CONFIG_LGE_PM_LGE_POWER_CLASS_SUPPORT_CCD is not set
 # CONFIG_LGE_PM_LGE_POWER_CLASS_VZW_REQ is not set
+CONFIG_USB_HOST_NOTIFY=y
