--- a/arch/arm64/configs/lucy_lgu_kr-perf_defconfig
+++ b/arch/arm64/configs/lucy_lgu_kr-perf_defconfig
@@ -776,3 +776,4 @@ CONFIG_LFR_SUBNET_DETECTION=y
 CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 # CONFIG_WCN399x [END]
+CONFIG_USB_HOST_NOTIFY=y
