--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -27,15 +27,11 @@ else
 acenic-objs := acenic/tg1.bin acenic/tg2.bin
 endif
 
-ifdef CONFIG_LGE_TOUCH_FW_PATH
-fwpath := $(subst ",,$(CONFIG_LGE_TOUCH_FW_PATH))
-lge_touch_image_files := $(wildcard $(srctree)/firmware/$(fwpath)/*.img)
-lge_touch_image_files += $(wildcard $(srctree)/firmware/$(fwpath)/*.ftb)
-lge_touch_image_files += $(wildcard $(srctree)/firmware/$(fwpath)/*.txt)
+ifdef CONFIG_LGE_TOUCH_CORE_BASE
+fw-shipped-$(CONFIG_MACH_MSM8998_JOAN) += touch/joan/joan_limit.txt \
+					  touch/joan/joan_limit_mfts.txt \
+					  touch/joan/L0S59P1_1_08.ftb
 endif
-lge_touch_firmware := $(subst $(srctree)/firmware/,,$(lge_touch_image_files))
-fw-shipped-$(CONFIG_LGE_TOUCH_CORE_BASE) += $(lge_touch_firmware)
-fw-shipped-$(CONFIG_TOUCHSCREEN_FTM4) += $(lge_touch_firmware)
 
 fw-shipped-$(CONFIG_ACENIC) += $(acenic-objs)
 fw-shipped-$(CONFIG_ADAPTEC_STARFIRE) += adaptec/starfire_rx.bin \
@@ -153,7 +149,7 @@ quiet_cmd_ihex  = IHEX    $@
       cmd_ihex  = $(OBJCOPY) -Iihex -Obinary $< $@
 
 quiet_cmd_copy  = COPY    $@
-      cmd_copy  = cp -u $(srctree)/$@ $@
+      cmd_copy  = cp -u $< $@
 
 quiet_cmd_ihex2fw  = IHEX2FW $@
       cmd_ihex2fw  = $(objtree)/$(obj)/ihex2fw $< $@
@@ -192,18 +188,6 @@ wordsize_deps := $(wildcard include/config/64bit.h include/config/32bit.h \
 		include/config/superh32.h include/config/superh64.h \
 		include/config/x86_32.h include/config/x86_64.h)
 
-# Workaround for make < 3.81, where .SECONDEXPANSION doesn't work.
-# It'll end up depending on these targets, so make them a PHONY rule which
-# depends on _all_ the directories in $(firmware-dirs), and it'll work out OK.
-PHONY += $(objtree)/$$(%) $(objtree)/$(obj)/$$(%)
-$(objtree)/$$(%) $(objtree)/$(obj)/$$(%): $(firmware-dirs)
-	@true
-# For the $$(dir %) trick, where we need % to be expanded first.
-.SECONDEXPANSION:
-ifneq ($(objtree),$(srctree))
-$(patsubst %,$(obj)/%, $(fw-shipped-y)): %: %.gen.S
-	$(call cmd,copy)
-endif
 $(patsubst %,$(obj)/%.gen.S, $(fw-shipped-y)): %: $(wordsize_deps)
 	$(call cmd,fwbin,$(patsubst %.gen.S,%,$@))
 $(patsubst %,$(obj)/%.gen.S, $(fw-external-y)): %: $(wordsize_deps) \
@@ -218,6 +202,10 @@ $(patsubst %,$(obj)/%.gen.o, $(fw-external-y)): $(obj)/%.gen.o: $(fwdir)/%
 # where binaries are frowned upon. They are directly converted with objcopy.
 $(obj)/%: $(obj)/%.ihex
 	$(call cmd,ihex)
+
+# .plain text firmware configuration files can just be copied.
+$(obj)/%: $(obj)/%.cp
+	$(call cmd,copy)
 
 # Don't depend on ihex2fw if we're installing and it already exists.
 # Putting it after | in the dependencies doesn't seem sufficient when
